tests/init/neg/unsound1.check
-- Error: tests/init/neg/unsound1.scala:2:35 ---------------------------------------------------------------------------
2 |  if (m > 0) println(foo(m - 1).a2.n) // error
  |                     ^^^^^^^^^^^^^^^
  |                     Access field variable n on a cold object. Calling trace:
  |                     -> class A(m: Int) {	[ unsound1.scala:1 ]
  |                        ^
  |                     -> if (m > 0) println(foo(m - 1).a2.n) // error	[ unsound1.scala:2 ]
  |                                           ^^^^^^^^^^^^^^^
